FIX (page load) : overflow + logo size

--- a/assets/sass/style-default.scss
+++ b/assets/sass/style-default.scss
@@ -1,6 +1,10 @@
 
 @import "variables";
 
+html {
+    overflow: hidden;
+}
+
 // $black : #3d3d3d;
 $black : #1d1d1d;
 $color1 : #f8204b;
